@@ -1,0 +1,15 @@
+
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Giver
+_Comment=Easy quick file sharing
+_GenericName=File Sharing
+Exec=giver
+Icon=giver
+StartupNotify=false
+Terminal=false
+Type=Application
+Categories=Network;FileSharing
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=giver
+X-GNOME-Bugzilla-Component=General
