@@ -1,0 +1,46 @@
+
+pixmapdir = $(datadir)/pixmaps
+pixmap_DATA = 	giver-16.png \
+				giver-22.png \
+				giver-24.png \
+				giver-32.png \
+				giver-44.png 
+
+hicolordir = $(datadir)/icons/hicolor
+
+tango_icons = 				\
+				giver-16.png \
+				giver-22.png \
+				giver-24.png \
+				giver-32.png \
+				giver-44.png
+
+install-data-local:
+	@-$(mkinstalldirs) $(DESTDIR)$(hicolordir)/16x16/apps $(DESTDIR)$(hicolordir)/22x22/apps $(DESTDIR)$(hicolordir)/24x24/apps $(DESTDIR)$(hicolordir)/32x32/apps $(DESTDIR)$(hicolordir)/44x44/apps
+	$(INSTALL_DATA) $(srcdir)/giver-16.png $(DESTDIR)$(hicolordir)/16x16/apps/giver.png
+	$(INSTALL_DATA) $(srcdir)/giver-22.png $(DESTDIR)$(hicolordir)/22x22/apps/giver.png
+	$(INSTALL_DATA) $(srcdir)/giver-24.png $(DESTDIR)$(hicolordir)/24x24/apps/giver.png
+	$(INSTALL_DATA) $(srcdir)/giver-32.png $(DESTDIR)$(hicolordir)/32x32/apps/giver.png
+	$(INSTALL_DATA) $(srcdir)/giver-44.png $(DESTDIR)$(hicolordir)/44x44/apps/giver.png
+
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+
+install-data-hook:
+	@-if test -z "$(DESTDIR)"; then \
+		echo "Updating Gtk icon cache."; \
+		$(gtk_update_icon_cache); \
+	else \
+		echo "*** Icon cache not updated.  After install, run this:"; \
+		echo "***   $(gtk_update_icon_cache)"; \
+	fi
+
+uninstall-hook:
+	rm -f $(DESTDIR)$(hicolordir)/16x16/apps/giver.png
+	rm -f $(DESTDIR)$(hicolordir)/22x22/apps/giver.png
+	rm -f $(DESTDIR)$(hicolordir)/24x24/apps/giver.png
+	rm -f $(DESTDIR)$(hicolordir)/32x32/apps/giver.png
+	rm -f $(DESTDIR)$(hicolordir)/44x44/apps/giver.png
+
+noinst_DATA =
+
+EXTRA_DIST = $(noinst_DATA) $(pixmap_DATA) $(tango_icons)
